Refactors and API additions
